--- a/compositional_skills/writing/freeform/social_media/linkedin/profile_headline/qna.yaml
+++ b/compositional_skills/writing/freeform/social_media/linkedin/profile_headline/qna.yaml
@@ -1,24 +1,24 @@
 created_by: pujathacker2210
 seed_examples:
   - answer: 'Data Architect | AWS & Openshift Expert | Transforming Insights into Action'
-    question: I am a Data Architect wokring with AWS, Openshift. Help me write a profile headline for my LinkedIn profile.
+    question: I am a Data Architect working with AWS, Openshift. Help me write a headline for my LinkedIn profile
 
   - answer: 'Data Engineer | Snowflake & Redshift Specialist | Driving Scalable Solutions'
-    question: I am a Data Engineer specializing with Snowflake, Redshift. Help me write a profile headline for my LinkedIn profile.
+    question: I am a Data Engineer specializing with Snowflake, Redshift. Suggest a headline for my LinkedIn profile
 
   - answer: 'Passionate Data Platform Engineer | AWS, Openshift, Redshift | Innovating for Impact'
-    question: I am a Data Engineer specializing with AWS, Openshift, Redshift. Help me write a profile headline for my LinkedIn profile.
+    question: I am a Data Engineer specializing with Openshift, Redshift. Help me write a headline for my LinkedIn profile.
 
   - answer: 'Innovative Technical Manager | Bridging Technology and Business for Sustainable Growth'
-    question: I am a technical manager. Help me write a profile headline for my LinkedIn profile.  
+    question: I am a technical manager. Help me write a profile headline for my LinkedIn profile.
 
   - answer: 'Results-Driven Technical Leader | Orchestrating Success in Complex IT Environments'
-    question: I am a technical manager. Help me write a profile headline for my LinkedIn profile.  
+    question: I am a technical manager. Help me write a profile headline for my LinkedIn profile.
 
   - answer: 'Results-Driven Technical Leader | Orchestrating Success in Complex IT Environments'
-    question: I am a pilotr. Help me write a profile headline for my LinkedIn profile. 
+    question: I am a pilotr. Help me write a profile headline for my LinkedIn profile.
   
   - answer: 'Pilot in Command | Guiding Aircraft and Teams to New Heights'
-    question: I am a pilot. Help me write a profile headline for my LinkedIn profile. 
+    question: I am a pilot. Help me write a profile headline for my LinkedIn profile.
 
 task_description: ''
