--- a/compositional_skills/writing/freeform/jokes/puns/general/qna.yaml
+++ b/compositional_skills/writing/freeform/jokes/puns/general/qna.yaml
@@ -42,4 +42,10 @@ seed_examples:
 
     '
   question: Tell me a pun about Neverland.
+- answer: 'What kind of cheese is not yours?
+
+  Nacho cheese!
+
+    '
+  question: Tell me a pun about cheese.
 task_description: to teach a large language model to come up with puns
