Update create_by and signed off
Signed-off-by: Motohiro Abe <mabe@redhat.com>

--- a/compositional_skills/writing/freeform/philosophy/budda/qna.yaml
+++ b/compositional_skills/writing/freeform/philosophy/budda/qna.yaml
@@ -1,4 +1,4 @@
-created_by: motohiro
+created_by: mabehiro
 seed_examples:
 - answer: 'The key to happiness lies in contentment and inner peace.'
   question: What is the key to happiness?
