Add skill to reverse string
Signed-off-by: Mitul Sharma <misharma@redhat.com>

--- a/compositional_skills/writing/freeform/prose/reverse/qna.yaml
+++ b/compositional_skills/writing/freeform/prose/reverse/qna.yaml
@@ -12,4 +12,7 @@ seed_examples:
   - answer: "madam"
     question: "madam"
     context: "Can you reverse this text:"
+  - answer: "^%$ #@!"
+    question: "!@# $%^"
+    context: "Can you reverse this text:"
 task_description: Add a skill to reverse a string
