--- a/compositional_skills/writing/freeform/poetry/proverb/irish_proverbs/qna.yaml
+++ b/compositional_skills/writing/freeform/poetry/proverb/irish_proverbs/qna.yaml
@@ -13,7 +13,7 @@ seed_examples:
 
     '
   question: Give me an example of an Irish proverb about finishing a task
-   answer: 'Ní neart go cur le chéile.
+  - answer: 'Ní neart go cur le chéile.
   \ Translation: "There is no strength without unity." This proverb can be interpreted as emphasizing the importance of teamwork and collaboration in accomplishing tasks or goals.
   
 
