--- a/compositional_skills/extraction/information/named_entities/food/allergies/qna.yaml
+++ b/compositional_skills/extraction/information/named_entities/food/allergies/qna.yaml
@@ -2,7 +2,7 @@ created_by: clodaghwalsh17
 seed_examples:
 - answer: |
   It depends on the brownie. Be careful since a lot of vegan deserts contain nut butter instead of eggs.
-  question: I have a nut allegry would it be safe for me to eat a vegan brownie.
+  question: I have a nut allergy would it be safe for me to eat a vegan brownie.
 - answer: |
   Custard is egg based. Eating the custard tart would likely trigger your allegry.
   question: Would it be ok for me to eat a custard tart with my egg allegry?
