--- a/compositional_skills/extraction/information/named_entities/food/allergies/qna.yaml
+++ b/compositional_skills/extraction/information/named_entities/food/allergies/qna.yaml
@@ -4,8 +4,8 @@ seed_examples:
   It depends on the brownie. Be careful since a lot of vegan deserts contain nut butter instead of eggs.
   question: I have a nut allergy would it be safe for me to eat a vegan brownie.
 - answer: |
-  Custard is egg based. Eating the custard tart would likely trigger your allegry.
-  question: Would it be ok for me to eat a custard tart with my egg allegry?
+  Custard is egg based. Eating the custard tart would likely trigger your allergy.
+  question: Would it be ok for me to eat a custard tart with my egg allergy?
 - answer: |
   It is not recommended since pizza has a cheese topping.
   question: I am lactose intolerant can I eat pizza? 
