--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -68,11 +68,14 @@ jobs:
             case $file in knowledge*)
               error "1:1: We do not accept knowledge PRs at this time"
             esac
-            yq '.created_by       | length > 0'     $file | grep -q false  &&  warn  "$(yq '.created_by|line'       $file):1: missing/empty 'created_by'"
-            yq '.task_description | length > 0'     $file | grep -q false  &&  warn  "$(yq '.task_description|line' $file):1: missing/empty 'task_description'"
-            yq '.seed_examples'                     $file | grep -q null   &&  error "$(yq '.seed_examples|line'    $file):1: missing 'seed_examples'"
-            yq '.seed_examples   | length >= 3'     $file | grep -q false  &&  warn  "$(yq '.seed_examples|line'    $file):1: less than 3 'seed_examples'"
-            yq '.seed_examples[] | has("question")' $file | grep -q false  &&  error "$(yq '.seed_examples|line'    $file):1: missing 'question's"
-            yq '.seed_examples[] | has("answer")'   $file | grep -q false  &&  error "$(yq '.seed_examples|line'    $file):1: missing 'answer's"
+            yq '.created_by       | length > 0'            $file | grep -q false && warn  "$(yq '.created_by|line'       $file):1: missing/empty 'created_by'"
+            yq '.task_description | length > 0'            $file | grep -q false && warn  "$(yq '.task_description|line' $file):1: missing/empty 'task_description'"
+            yq '.seed_examples'                            $file | grep -q null  && error "$(yq '.seed_examples|line'    $file):1: missing 'seed_examples'"
+            yq '.seed_examples   | length >= 3'            $file | grep -q false && warn  "$(yq '.seed_examples|line'    $file):1: less than 3 'seed_examples'"
+            yq '.seed_examples[] | .question | length > 0' $file | grep -q false && error "$(yq '.seed_examples|line'    $file):1: missing/empty 'question's"
+            yq '.seed_examples[] | .answer   | length > 0' $file | grep -q false && error "$(yq '.seed_examples|line'    $file):1: missing/empty 'question's"
+            if $( yq '.seed_examples[] | has("context")'   $file | grep -q true ); then
+              yq '.seed_examples[] | .context| length > 0' $file | grep -q false && error "$(yq '.seed_examples|line'    $file):1: missing/empty 'context's"
+            fi
           done
           exit $ERR
