skill: How to create a zone in OpenStack Designate
If your PR is related to a contribution to the taxonomy, please, fill out the following questionnaire. If not, replace this whole text and the following questionnaire with whatever information is applicable to your PR.

**Describe the contribution to the taxonomy**

- Gives correct instructions for creating a zone using OpenStack Designate
- Give instructions for how to create a zone with a TTL using OpenStack Designate

**Input given at the prompt**

<!-- What you entered, replace "..." -->

```
   How do you create a zone using the OpenStack client?
```


**Response that was received**

<!-- What you received in response to your input, replace "..." -->

```
  To create a zone using the OpenStack client, you can use the `openstack zone create` command. This command is used to create a new zone in the OpenStack environment. The basic syntax for this command is as follows:

openstack zone create <zone_name>

Replace `<zone_name>` with the desired name for the new zone. For example, to create a zone named "example-zone", you would use the following command:

openstack zone create example-zone

This command will create a new zone with the specified name in your OpenStack environment. You can then use this zone to manage DNS records and other related tasks.

Keep in mind that the specific options and parameters available for this command may vary depending on the OpenStack release and configuration. Always consult the official documentation for the most up-to-date information on using the OpenStack client.
```


**Response that is now received instead**

<!-- What you receive with your contribution, replace "..." -->

```
  To create a zone using the OpenStack client, you can use the following command:

openstack zone create --email <zone-email> <zone-name>

Replace `<zone-email>` and `<zone-name>` with the actual values you want to use for your zone. Zone names must be a ful

--- a/compositional_skills/writing/freeform/technical/OpenStack/Designate/CLI/qna.yaml
+++ b/compositional_skills/writing/freeform/technical/OpenStack/Designate/CLI/qna.yaml
@@ -36,3 +36,24 @@ seed_examples:
       ```bash
       oepnstack zone create --email admin@example.com --ttl 300 example.com.
       ```
+  - question: |
+      How do you create a zone, with a description, using the OpenStack
+      client?
+    answer: |
+      To create a zone that specifies a description using the OpenStack client,
+      you can use the following command:
+      ```bash
+      openstack zone create --email <zone-email> --description
+      <zone-description> <zone-name>
+      ```
+      Replace `<zone-email>`, `<zone-description>`, and `<zone-name>` with
+      the actual values you want to use for your zone. The zone name must be
+      a fully qualified domain name.
+
+      For example, to create a zone for `example.com` with an administrative
+      email address of `admin@example.com` and description of `example zone`,
+      you would use the following command:
+      ```bash
+      oepnstack zone create --email admin@example.com --description
+      'example zone' example.com.
+      ```
