--- a/compositional_skills/writing/freeform/brainstorming/idea_generation/qna.yaml
+++ b/compositional_skills/writing/freeform/brainstorming/idea_generation/qna.yaml
@@ -1,38 +1,22 @@
-created_by: shivsr
+created_by: sudhir008
 seed_examples:
-- answer: '1. "Eco-Hero Challenge": Create an interactive campaign that encourages
-    customers to become "Eco-Heroes" by switching to your sustainable home products.
-    Provide a checklist of eco-friendly actions to take, such as replacing single-use
-    plastics with reusable items, and offer rewards for completing each task, like
-    discounts on your new product line.
-
-
-    2. "Sustainable Home Makeover": Partner with influencers, bloggers, or local eco-conscious
-    celebrities to showcase a head-to-toe eco-friendly home makeover using your new
-    product line. Share the transformation on social media platforms, and create a
-    series of blog posts or videos detailing the process, benefits, and cost comparisons
-    of eco-friendly products versus traditional ones.
-
-
-    3. "Plant a Tree with Every Purchase": Collaborate with a reputable tree-planting
-    organization to plant a tree for every purchase made from your new eco-friendly
-    product line. Promote this initiative through your marketing channels, emphasizing
-    the positive environmental impact of choosing sustainable products.
-
-
-    4. "Eco-Friendly Swap Party": Organize a virtual or in-person event where customers
-    can bring one traditional home product to swap for a sustainable alternative from
-    your new line. Offer eco-friendly tips, DIY projects, and refreshments, and encourage
-    attendees to share their experiences on social media using a branded hashtag.
-
-
-    5. "Eco-Innovation Showcase": Host a virtual or in-person event to highlight the
-    innovative features of your new eco-friendly product line. Invite industry experts,
-    environmental organizations, and customers to discuss the importance of sustainability
-    and the benefits of your products. Offer interactive workshops, Q&A sessions,
-    and special promotions for attendees.
-
-    '
-  question: Generate 5 creative ideas for a marketing campaign promoting a new line
-    of eco-friendly or sustainable products for the home.
-task_description: ''
+  - answer: Build muscle memory by centering your index fingers on the letter 'F'
+      and 'J' which has bumps. Position the thumb of both right and left hand on
+      the space bar. The middle, ring and the little finger rest along the keys
+      in line of the as of 'F' and 'J' respectively which is 'D', 'A' & 'S' for
+      the left hand and 'K', 'L' & ';' for the right hand. Practice moving
+      fingers from this center position to other letters and comeback to the
+      base position after a each word. The bmps on 'F' and 'J' helps you to
+      quickly come back to base position without looking at the keyboard and
+      with adequate practice you can start typing like a professional very
+      quickly without formal training.
+    question: How to start typing like a professional very quickly without formal
+      training?
+  - answer: Perform finger exercise regularly and take brakes between typing. Keep
+      fingers in the resting position away from keyboard while not typing.
+    question: How to aviod stiffness of fingers while typing for long duration?
+  - answer: Synchronize the fingers with that of the thoughts in your mind. Don't
+      get your thoughts ahead of actual typing speed. Each individual has
+      certain typing speed that can be improved over a period of time.
+    question: How to aviod unforced errors while typing?
+task_description: This lets users know how to type like professionals without formal training.
