--- a/compositional_skills/writing/freeform/jokes/puns/qna.yaml
+++ b/compositional_skills/writing/freeform/jokes/puns/qna.yaml
@@ -49,4 +49,12 @@ seed_examples:
 
     '
   question: Tell me a pun about Neverland.
+- answer: 'Why can't you trust stairs?
+
+
+    Because they're always up to something.
+
+    '
+  question: Tell me a pun about stairs.
+
 task_description: ''
