--- a/compositional_skills/extraction/linguistic/remove_diacritics/qna.yaml
+++ b/compositional_skills/extraction/linguistic/remove_diacritics/qna.yaml
@@ -4,7 +4,7 @@ seed_examples:
   - answer: |
       Here's the sentence without diacritical marks:
 
-      Prilis zlutoucky kun upel dabelske ody
+      Prilis zlutoucky kun upel dabelske ody.
 
       The original sentence "Příliš žluťoučký kůň úpěl ďábelské ódy." is >
       written in Czech, which is a language that uses diacritical marks called >
@@ -18,12 +18,30 @@ seed_examples:
       Could you delete the diacritical marks in the following sentence? >
       "Příliš žluťoučký kůň úpěl ďábelské ódy."
   - answer: |
+      Here's the sentence with the correct diacritical marks added:
+
+      Příliš žluťoučký kůň úpěl ďábelské ódy.
+
+      The original sentence "Prilis zlutoucky kun upel dabelske ody." is >
+      written in Czech, which is a language that uses diacritical marks called >
+      "diacritics." These marks serve to modify the pronunciation and meaning >
+      of the letters they are attached to. In this case, the added marks are >
+      the caron (č, ď, ě, ň, ř, š, ť, ž), the acute accent (á, é, í, ó, ú, ý), >
+      and the ring (ů). I have added the necessary diacritical marks to the >
+      original sentence to ensure that it is correctly spelled and >
+      pronounceable in Czech. This is essential because diacritics help >
+      distinguish between different words and sounds, making it possible to >
+      convey the intended meaning accurately.
+    question: |
+      Could you add the right diacritical marks in the following sentence? >
+      "Prilis zlutoucky kun upel dabelske ody."
+  - answer: |
       Here's the sentence without diacritical signs:
 
       PRILIS ZLUTOUCKY KUN UPEL DABELSKE ODY.
 
       The original sentence "PŘÍLIŠ ŽLUŤOUČKÝ KŮŇ ÚPĚL ĎÁBELSKÉ ÓDY." is >
-      written in Czech,  which is a language that uses diacritical marks >
+      written in Czech, which is a language that uses diacritical marks >
       called "diacritics." These marks serve to modify the pronunciation >
       and meaning of the letters they are attached to. In this case, the >
       marks used are the caron (Č, Ď, Ě, Ň, Ř, Š, Ť, Ž), the acute accent >
@@ -33,6 +51,24 @@ seed_examples:
     question: |
       Could you omit the diacritical signs in the following sentence? >
       "PŘÍLIŠ ŽLUŤOUČKÝ KŮŇ ÚPĚL ĎÁBELSKÉ ÓDY."
+  - answer: |
+      Here's the sentence with the correct diacritical signs added:
+
+      PŘÍLIŠ ŽLUŤOUČKÝ KŮŇ ÚPĚL ĎÁBELSKÉ ÓDY.
+
+      The original sentence "PRILIS ZLUTOUCKY KUN UPEL DABELSKE ODY." is >
+      written in Czech, which is a language that uses diacritical marks >
+      called "diacritics." These marks serve to modify the pronunciation >
+      and meaning of the letters they are attached to. In this case, the >
+      added marks are the caron (Č, Ď, Ě, Ň, Ř, Š, Ť, Ž), the acute accent >
+      (Á, É, Í, Ó, Ú, Ý), and the ring (Ů). I have added the necessary >
+      diacritical marks to the original sentence to ensure that it is >
+      correctly spelled and pronounceable in Czech. This is essential because >
+      diacritics help distinguish between different words and sounds, making >
+      it possible to convey the intended meaning accurately.
+    question: |
+      Could you include the diacritical signs in the following sentence? >
+      "PRILIS ZLUTOUCKY KUN UPEL DABELSKE ODY."
   - answer: |
       Here's the sentence without accents:
 
@@ -50,6 +86,24 @@ seed_examples:
       Could you pass away the accents in the following sentence? >
       "Loď čeří kýlem tůň obzvlášť v Grónské úžině."
   - answer: |
+      Here's the sentence with the correct accents added:
+
+      Loď čeří kýlem tůň obzvlášť v Grónské úžině.
+
+      The original sentence "Lod ceri kylem tun obzvlast v Gronske uzine." is >
+      written in Czech, which is a language that uses diacritical marks called >
+      "diacritics." These marks serve to modify the pronunciation and meaning >
+      of the letters they are attached to. In this case, the marks used are >
+      the caron (č, ď, ě, ň, ř, š, ť, ž), the acute accent (á, é, í, ó, ú, ý), >
+      and the ring (ů). I have added the necessary diacritical marks to the >
+      original sentence to ensure that it is correctly spelled and >
+      pronounceable in Czech. This is essential because diacritics help >
+      distinguish between different words and sounds, making it possible to >
+      convey the intended meaning accurately.
+    question: |
+      Could you fill in the appropriate accents in the following sentence? >
+      "Lod ceri kylem tun obzvlast v Gronske uzine."
+  - answer: |
       Here's the sentence without diacritics:
 
       LOD CERI KYLEM TUN OBZVLAST V GRONSKE UZINE.
@@ -66,6 +120,24 @@ seed_examples:
       Could you cut the diacritics in the following sentence? >
       "LOĎ ČEŘÍ KÝLEM TŮŇ OBZVLÁŠŤ V GRÓNSKÉ ÚŽINĚ."
   - answer: |
+      Here's the sentence with the corrcet diacritics added:
+
+      LOĎ ČEŘÍ KÝLEM TŮŇ OBZVLÁŠŤ V GRÓNSKÉ ÚŽINĚ.
+
+      The original sentence "LOD CERI KYLEM TUN OBZVLAST V GRONSKE UZINE." is >
+      written in Czech, which is a language that uses diacritical marks called >
+      "diacritics." These marks serve to modify the pronunciation and meaning >
+      of the letters they are attached to. In this case, the added marks are >
+      the caron (Č, Ď, Ě, Ň, Ř, Š, Ť, Ž), the acute accent (Á, É, Í, Ó, Ú, Ý), >
+      and the ring (Ů). I have added the necessary diacritical marks to the >
+      original sentence to ensure that it is correctly spelled and >
+      pronounceable in Czech. This is essential because diacritics help >
+      distinguish between different words and sounds, making it possible to >
+      convey the intended meaning accurately.
+    question: |
+      Could you complete the diacritics in the following sentence? >
+      "LOD CERI KYLEM TUN OBZVLAST V GRONSKE UZINE."
+  - answer: |
       Here's the sentence without accents:
 
       Kdyz ptacka lapaji, pekne mu zpivaji.
@@ -80,6 +152,23 @@ seed_examples:
     question: |
       Could you omit the accents in the following sentence? "Když ptáčka >
       lapají, pěkně mu zpívají."
+  - answer: |
+      Here's the sentence with the corrcect accents added:
+
+      Když ptáčka lapají, pěkně mu zpívají.
+
+      The original sentence "Kdyz ptacka lapaji, pekne mu zpivaji." is written >
+      in Czech, which is a language that uses diacritical marks called >
+      "diacritics." These marks serve to modify the pronunciation and meaning >
+      of the letters they are attached to. In this case, the marks used are >
+      the caron (č, ě, ž), and the acute accent (á, í). I have added the >
+      necessary diacritical marks to the original sentence to ensure that it >
+      is correctly spelled and pronounceable in Czech. This is essential >
+      because diacritics help distinguish between different words and sounds, >
+      making it possible to convey the intended meaning accurately.
+    question: |
+      Could you inscribe the accents in the following sentence? >
+      "Kdyz ptacka lapaji, pekne mu zpivaji."
   - answer: |
       Here's the sentence without diacritical points:
 
@@ -97,6 +186,23 @@ seed_examples:
       Could you eliminate the diacritical points in the following >
       sentence? "Lepší vrabec v hrsti než holub na střeše."
   - answer: |
+      Here's the sentence with the correct diacritical points added:
+
+      Lepší vrabec v hrsti než holub na střeše.
+
+      The original sentence "Lepsi vrabec v hrsti nez holub na strese." >
+      is written in Czech,  which is a language that uses diacritical marks >
+      called "diacritics." These marks serve to modify the pronunciation and >
+      meaning of the letters they are attached to. In this case, the marks >
+      used are the caron (ř, š, ž), and the acute accent (í). I have added the >
+      necessary diacritical marks to the original sentence to ensure that it >
+      is correctly spelled and pronounceable in Czech. This is essential >
+      because diacritics help distinguish between different words and sounds, >
+      making it possible to convey the intended meaning accurately.
+    question: |
+      Could you attach the correct diacritical points in the following >
+      sentence? "Lepsi vrabec v hrsti nez holub na strese."
+  - answer: |
       Here's the sentence without diacritics:
 
       Nekdy byva gnomum vagne prisuzovan vyssi charakter.
@@ -112,6 +218,24 @@ seed_examples:
     question: |
       Could you wipe off the diacritics in the following sentence? >
       "Někdy bývá gnómům vágně přisuzován vyšší charakter."
+  - answer: |
+      Here's the sentence with the correct diacritics added:
+
+      Někdy bývá gnómům vágně přisuzován vyšší charakter.
+
+      The original sentence "Nekdy byva gnomum vagne prisuzovan vyssi >
+      charakter." is written in Czech, which is a language that uses >
+      diacritical marks called "diacritics." These marks serve to modify the >
+      pronunciation and meaning of the letters they are attached to. In this >
+      case, the marks used are the caron (ě, ř, š), the acute accent (á, í, >
+      ó, ý), and the ring (ů). I have added the necessary diacritical marks to >
+      the original sentence to ensure that it is correctly spelled and >
+      pronounceable in Czech. This is essential because diacritics help >
+      distinguish between different words and sounds, making it possible to >
+      convey the intended meaning accurately.
+    question: |
+      Could you amend the proper diacritics in the following sentence? >
+      "Nekdy byva gnomum vagne prisuzovan vyssi charakter."
 task_description: |
-  The accents removal task enables deleting diacritical marks from the
-  original sentence.
+  The accents removal/attach task enables deleting/adding diacritical marks >
+  from/to the original sentence.
